# AI-Hackathon-2025

./: README.md  compatibility_agent.py  main.py  profile_reader.py  pyproject.toml  redFlagAgent.py  requirements.txt  template.py  wingMan.py
agents_workflow/: profile_agent.py  profile_reader_agent.py
agents_workflow/data/: profiles.json
confiig/: config.py
data/: profiles.json
schemas/: schema.py
tools/: profile_proccesor.py
uploads/: roommate_preference_template (1)_2.docx  roommate_preference_template_4.docx
utils/: agent_runners.py
